gateway/deploy/k8s/deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: gateway
  labels:
    app: gateway
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      imagePullSecrets:
        - name: dockerregistrykey
      containers:
        - image: ${ECR_IMAGE}
          name: gateway
          imagePullPolicy: Always
          command:
            - "yarn"
            - "start:production"
          resources: { }

          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: gateway-service
  labels:
    run: gateway
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http-gateway
  type: NodePort
  selector:
    app: gateway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: ${NAMESPACE}
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    external-dns.alpha.kubernetes.io/hostname: "${BASEDOMAIN}"
spec:
  ingressClassName: alb
  rules:
    - host: "${BASEDOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/ws-query"
            backend:
              service:
                name: ws-service
                port:
                  number: 8000
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
